chore: added button!

--- a/src/lib/components/Button/Button.module.css
+++ b/src/lib/components/Button/Button.module.css
@@ -114,7 +114,8 @@
   box-shadow: none;
   background: transparent;
   color: var(--themed-bg);
-  --themed-border: var(--themed-bg);
+  /* --themed-border: var(--themed-bg); */
+  border: 1px solid var(--themed-border, var(--geist-foreground));
 }
 
 .invert[data-active] {
